# AI-Engineering

./: .gitmodules  404.html  README.Project-Structure.md  README.md  Taskfile.yaml  index.html  pyproject.toml
.devcontainer/python-template/: devcontainer.json
.github/workflows/: CI.Python..yml
.github/workflows/python-template/: python-build.yml  python-ci.mkdocs.yml  python-publish.yml  python-test.yml
README/: Git-Submodules.md
docs/: index.md
docs/runbooks/: reference.md
getting-started/: index.html
python-template/: CHANGELOG.md  Taskfile.yaml  pyproject.toml
python-template/docs/: index.md
python-template/docs/runbooks/: guides.md
python-template/src/: main.py
python-template/src/runbooks/: file_manager.py  toolkit.py
python-template/tests/: test_toolkit.py
runbooks/explanation/: index.html
runbooks/guides/: index.html
runbooks/reference/: index.html
runbooks/tutorials/: index.html
src/runbooks/: README.md  file_manager.py
tests/: test_file_manager.py
