[project]
## Metadata: https://docs.astral.sh/uv/concepts/projects/config/
name = "runbooks"
## Incremented for new release
version = "0.1.7"
description = "CloudOps Automation Toolkit for DevOps and SRE teams."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}

authors = [
    {name = "runbooks maintainers", email = "nnthanh101@gmail.com"},
]

keywords = ["runbooks", "automation", "DevOps", "SRE", "CloudOps"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

## Core Dependencies
dependencies = [
    "requests>=2.32.3",
    "loguru>=0.7.3",
    "tqdm>=4.67.1",
    

    ## 1xOps/CloudOps-Runbooks: https://pypi.org/project/runbooks/
    "runbooks>=0.2.0"
]

[dependency-groups]
## Development Dependencies
dev = [
    ## Testing Tools
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    # "black>=23.11.0",
    # "pre-commit>=3.5.0",
    "typer>=0.15.1",
    "versioningit",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}  ## Use 'src' as root
packages = ["runbooks"]
license-files = []
# license-files = ["LICENSE"]

[tool.versioningit]
vcs = "git"
tag2version = "v{base}"
default-version = "0.1.7"

[tool.pytest.ini_options]
## Test Configuration
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src/runbooks --cov-report=term-missing --verbose"


[project.scripts]
## CLI Commands
runbooks-aws = "runbooks.aws:run_script"
runbooks-security = "runbooks.security_baseline:run_script"


[tool.ruff]
## Linting and Formatting Configurations
## https://docs.astral.sh/ruff/configuration/
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["F401", "E501", "F811"] 
fixable = ["I"]
unfixable = []

[tool.ruff.format]
line-ending = "lf"
